# tiny_ui

./: .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: cmake.yml
docs/: Doxyfile.in
samples/: README.md  main.cpp
samples/demo/: README.md  main.cpp
samples/hello_world/: README.md  main.cpp
src/: main.cpp  sdl2_iodevice.cpp  sdl2_iodevice.h  sdl2_renderer.cpp  sdl2_renderer.h  tinyui.cpp  tinyui.h  tinyui_config.h  widgets.cpp  widgets.h
src/backends/: sdl2_iodevice.cpp  sdl2_iodevice.h  sdl2_renderer.cpp  sdl2_renderer.h
